<resources>
    <string name="app_name">Cari Kado</string>
    <string name="base_url">http://madamita.ml:8080/cari-kado/api/</string>
    <string name="base_images_url">http://madamita.ml:8080/cari-kado/images/</string>
    <!--<string name="base_url">http://192.168.137.109:8080/api/</string>-->
    <!--<string name="base_images_url">http://192.168.137.109:8080/images/</string>-->

    <string name="find_gift">Cari Kado</string>
    <string name="gift_info">Info Kado</string>
    <string name="help">Bantuan</string>
    <string name="review">Review</string>
    <string name="last_page_error">Already at last pages</string>

    <string name="exit">Keluar</string>
    <string name="exit_confirm">Apakah anda yakin ingin keluar ?</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>

    <string name="loading_data">Mengambil data...</string>

    <string name="ageFrom">Usia</string>
    <string name="age_empty">Usia tidak dapat kosong</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="budget">Budget</string>
    <string name="budget_empty">Budget tidak dapat kosong</string>
    <string name="to">sampai</string>
    <string name="category">Kategori</string>
    <string name="search">Cari</string>
    <string name="gender_error">Data gender tidak ditemukan</string>
    <string name="gift_info_category_error">Tidak dapat mengambil data kategori</string>

    <string name="sort_by">Urutkan berdasarkan</string>
    <string name="filter_by">Filter item</string>
    <string name="gift_info_error">Tidak dapat mengambil data info kado</string>

    <string name="description">Deskripsi</string>
    <string name="essence">Esensi</string>
    <string name="year">tahun</string>
    <string name="rupiah">rupiah</string>
    <string name="result_gift_error">Tidak dapat mengambil data kado</string>
    <string name="result_gift_not_found">Kado tidak ditemukan</string>

    <string name="name">Nama</string>
    <string name="name_empty">Nama tidak dapat kosong</string>
    <string name="email">Email</string>
    <string name="email_empty">Email tidak dapat kosong</string>
    <string name="comment">Komentar</string>
    <string name="comment_empty">Komentar tidak dapat kosong</string>
    <string name="rate">Peringkat</string>
    <string name="rate_empty">Peringkat tidak dapat kosong</string>
    <string name="submit">Submit</string>
    <string name="ok">Ok</string>
    <string name="review_loading">Review sedang ditambahkan...</string>
    <string name="review_complete">Review telah berhasil ditambahkan</string>
    <string name="review_error">Tidak dapat menambahkan review</string>

    <string name="chat">Chatting</string>
    <string name="call">Telepon</string>
    <string name="contact">Hubungi</string>
    <string name="chat_desc">Komunikasikan ide dan pendapat anda dengan kami melalui fitur chat dibawah ini</string>
    <string name="email_desc">Kirim pesan dan diskusi mu melalui fitur email kami</string>
    <string name="contact_desc">Tidak ingin menunggu ? telepon kami sekarang</string>

    <string name="email_user">Email Anda</string>
    <string name="email_user_empty">Email anda tidak dapat kosong</string>
    <string name="email_subject">Subyek</string>
    <string name="email_subject_empty">Subyek tidak dapat kosong</string>
    <string name="email_content">Pesan</string>
    <string name="email_content_empty">Pesan tidak dapat kosong</string>
    <string name="send">Kirim</string>

    <string name="base_phone_number">085648897482</string>
    <string name="base_email_address">zulffaza@gmail.com</string>
    <string name="base_email_subject">Bantuan Kado : </string>
    <string name="email_not_found">Aplikasi email tidak ditemukan...</string>

    <string-array name="gender_array">
        <item>All</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    
    <string-array name="gift_info_sort_by">
        <item>Terbaru</item>
        <item>Terlama</item>
        <item>Judul A-Z</item>
        <item>Judul Z-A</item>
        <item>Umur Terendah</item>
        <item>Umur Tertinggi</item>
        <item>Budget Terendah</item>
        <item>Budget Tertinggi</item>
    </string-array>

    <integer-array name="gift_info_sort_by_code">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>8</item>
        <item>9</item>
        <item>12</item>
    </integer-array>

    <string-array name="gift_sort_by">
        <item>Nama Barang A-Z</item>
        <item>Nama Barang Z-A</item>
        <item>Umur Terendah</item>
        <item>Umur Tertinggi</item>
        <item>Budget Terendah</item>
        <item>Budget Tertinggi</item>
        <item>Rating Terendah</item>
        <item>Rating Tertinggi</item>
    </string-array>

    <integer-array name="gift_sort_by_code">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </integer-array>
</resources>
