<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".emailhelp.view.activity.EmailHelpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_email_help"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.Toolbar"
            app:popupTheme="@style/AppTheme.NoActionBar" />

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_48dp_default_margin"
            android:contentDescription="@string/review"
            android:src="@drawable/ic_help_mail_big" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_icon"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_16dp_default_margin"
            android:paddingEnd="@dimen/activity_56dp_default_margin"
            android:paddingStart="@dimen/activity_56dp_default_margin"
            android:paddingTop="@dimen/activity_16dp_default_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_32dp_default_margin"
                android:gravity="center"
                android:text="@string/email_subject"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_email_subject"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="text|textEmailSubject"
                    android:padding="@dimen/activity_8dp_default_margin"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorBlack" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_24dp_default_margin"
                android:gravity="center"
                android:text="@string/email_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_email_content"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_96dp_default_margin"
                    android:gravity="center_horizontal"
                    android:inputType="text|textMultiLine"
                    android:padding="@dimen/activity_8dp_default_margin"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorBlack" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_send"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_56dp_default_margin"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>