<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_find_gift"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.Toolbar"
            app:popupTheme="@style/AppTheme.NoActionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_16dp_default_margin"
            android:paddingEnd="@dimen/activity_56dp_default_margin"
            android:paddingStart="@dimen/activity_56dp_default_margin"
            android:paddingTop="@dimen/activity_16dp_default_margin">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_24dp_default_margin"
                android:contentDescription="@string/find_gift"
                android:src="@drawable/ic_find_gift_header" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/age"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_8dp_default_margin"
                android:background="@drawable/edittext_style"
                android:gravity="center"
                android:inputType="number"
                android:padding="@dimen/activity_8dp_default_margin"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_24dp_default_margin"
                android:gravity="center"
                android:text="@string/gender"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_8dp_default_margin"
                android:entries="@array/loren_ipsum"
                android:foreground="@drawable/spinner_style"
                android:padding="@dimen/activity_8dp_default_margin"
                android:theme="@style/AppTheme.Spinner" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_24dp_default_margin"
                android:gravity="center"
                android:text="@string/budget"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_8dp_default_margin"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/et_budget_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_style"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="@dimen/activity_8dp_default_margin"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/et_budget_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_style"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="@dimen/activity_8dp_default_margin"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_24dp_default_margin"
                android:gravity="center"
                android:text="@string/category"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/sp_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_8dp_default_margin"
                android:entries="@array/loren_ipsum"
                android:foreground="@drawable/spinner_style"
                android:padding="@dimen/activity_8dp_default_margin"
                android:theme="@style/AppTheme.Spinner" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_32dp_default_margin">

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_style"
                    android:gravity="center"
                    android:text="@string/search"
                    android:textColor="@color/colorWhite" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>